examples/bad/main_parameter.xp
# main can not be parameterized (this can be later changed, but it's not a priority)
main x = x
